[gd_scene load_steps=23 format=3 uid="uid://qc046bctp57n"]

[ext_resource type="Script" path="res://Scripts/Player/PlayerController.gd" id="1_ej1b3"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerStats.gd" id="1_sce2v"]
[ext_resource type="Texture2D" uid="uid://dxvfvq3vn03ba" path="res://NBeast_Bar.png" id="2_kkkfp"]
[ext_resource type="Script" path="res://Scripts/Quests/Quest.gd" id="2_kyxfg"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerCamera.gd" id="2_rsliq"]
[ext_resource type="Script" path="res://Scenes/Packed/PlayerInputs.gd" id="2_xgk64"]
[ext_resource type="Script" path="res://Scripts/Player/Crouching.gd" id="4_8cvhv"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerAction.gd" id="4_ing7o"]
[ext_resource type="Script" path="res://Scripts/Player/Leaning.gd" id="4_yepiv"]
[ext_resource type="Script" path="res://Scripts/Player/HeadBobbing.gd" id="6_jkene"]
[ext_resource type="Texture2D" uid="uid://bnsleh5fba0gk" path="res://Assets/Elements/handIcon.png" id="7_u7sp3"]
[ext_resource type="Script" path="res://Scripts/Player/Noise.gd" id="9_2ju3r"]
[ext_resource type="Script" path="res://Scripts/Player/Inventory.gd" id="9_t6asi"]
[ext_resource type="Script" path="res://Scripts/Player/Pause.gd" id="13_y82ud"]
[ext_resource type="Texture2D" uid="uid://b3gxlcyitqri0" path="res://Assets/Elements/soundIcon.png" id="14_jeaud"]
[ext_resource type="Script" path="res://Scripts/Player/GameTimer.gd" id="15_rbqk4"]
[ext_resource type="Script" path="res://Scripts/Beast/StateUI.gd" id="16_d86sr"]
[ext_resource type="StyleBox" uid="uid://bcj6hssf0tbga" path="res://Assets/Data/Style.tres" id="16_wvoe7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tn7cq"]
radius = 0.186199
height = 1.31303

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yyxpu"]
radius = 0.186665
height = 0.545623

[sub_resource type="SphereShape3D" id="SphereShape3D_ty1on"]

[sub_resource type="Theme" id="Theme_naa5d"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0)
collision_layer = 2
slide_on_ceiling = false
script = ExtResource("1_ej1b3")

[node name="Inputs" type="Node" parent="."]
script = ExtResource("2_xgk64")

[node name="StandingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.342341, 0)
shape = SubResource("CapsuleShape3D_tn7cq")

[node name="CrouchingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.725078, 0)
shape = SubResource("CapsuleShape3D_yyxpu")
disabled = true

[node name="Quest" type="Node3D" parent="." node_paths=PackedStringArray("questLabel")]
script = ExtResource("2_kyxfg")
questLabel = NodePath("../Player_UI/Tasks")

[node name="Stats" type="Node3D" parent="."]
script = ExtResource("1_sce2v")

[node name="Head" type="Node3D" parent="."]
script = ExtResource("2_rsliq")

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Action" type="Node3D" parent="Head/Camera3D" node_paths=PackedStringArray("handIcon")]
script = ExtResource("4_ing7o")
handIcon = NodePath("../../../Player_UI/TextureRect")

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D/Action"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.67271e-08, 0, -0.305722)
target_position = Vector3(0, 0, -2)
collision_mask = 12

[node name="GrabPosition" type="Node3D" parent="Head/Camera3D/Action"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.98186e-08, 0, -1.41369)

[node name="Joint" type="Generic6DOFJoint3D" parent="Head/Camera3D/Action"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.98186e-08, 0, -1.39571)
node_a = NodePath("../StaticBody3D")
linear_limit_x/enabled = false
linear_limit_y/enabled = false
linear_limit_z/enabled = false

[node name="StaticBody3D" type="StaticBody3D" parent="Head/Camera3D/Action"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.98186e-08, 0, -1.74451)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/Action/StaticBody3D"]
shape = SubResource("SphereShape3D_ty1on")
disabled = true

[node name="Hand" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.18)

[node name="Crouch" type="Node3D" parent="." node_paths=PackedStringArray("raycheck", "camera", "headBob", "standingCollider", "crouchingCollider")]
script = ExtResource("4_8cvhv")
raycheck = NodePath("TopCheckRay")
camera = NodePath("../Head/Camera3D")
headBob = NodePath("../HeadBobbing")
standingCollider = NodePath("../StandingCollision")
crouchingCollider = NodePath("../CrouchingCollision")

[node name="TopCheckRay" type="RayCast3D" parent="Crouch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.47141, 0)
target_position = Vector3(0, 1, 0)
collision_mask = 9

[node name="Leaning" type="Node3D" parent="." node_paths=PackedStringArray("leftRay", "rightRay", "head", "camera")]
script = ExtResource("4_yepiv")
leftRay = NodePath("LeftRay")
rightRay = NodePath("RightRay")
head = NodePath("../Head")
camera = NodePath("../Head/Camera3D")

[node name="LeftRay" type="RayCast3D" parent="Leaning"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0, 0)
target_position = Vector3(-1, 0, 0)
collision_mask = 9
debug_shape_custom_color = Color(0.513726, 0.4, 0, 1)

[node name="RightRay" type="RayCast3D" parent="Leaning"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, 0)
target_position = Vector3(1, 0, 0)
collision_mask = 9
debug_shape_custom_color = Color(0.513726, 0.4, 0, 1)

[node name="HeadBobbing" type="Node3D" parent="." node_paths=PackedStringArray("head", "crouching")]
script = ExtResource("6_jkene")
head = NodePath("../Head")
crouching = NodePath("../Crouch")

[node name="NoiseControl" type="Node" parent="." node_paths=PackedStringArray("source", "soundIcon")]
script = ExtResource("9_2ju3r")
source = NodePath("..")
soundIcon = NodePath("../Player_UI/sound/TextureRect")

[node name="Inventory" type="Node" parent="." node_paths=PackedStringArray("textLabel", "hand")]
script = ExtResource("9_t6asi")
textLabel = NodePath("../Player_UI/Inventory")
hand = NodePath("../Head/Camera3D/Hand")
throw_force = 35.0

[node name="Player_UI" type="CanvasLayer" parent="."]
process_mode = 4
follow_viewport_enabled = true

[node name="HealthBar" type="TextureProgressBar" parent="Player_UI"]
offset_left = 6.0
offset_top = 6.0
offset_right = 354.0
offset_bottom = 60.0
scale = Vector2(0.68, 0.284476)
value = 100.0
texture_under = ExtResource("2_kkkfp")
texture_progress = ExtResource("2_kkkfp")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0.866667, 0, 0, 1)

[node name="StaminaBar" type="TextureProgressBar" parent="Player_UI"]
offset_left = 6.0
offset_top = 34.0
offset_right = 354.0
offset_bottom = 88.0
scale = Vector2(0.68, 0.284476)
value = 100.0
texture_under = ExtResource("2_kkkfp")
texture_progress = ExtResource("2_kkkfp")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0, 0.431373, 0.921569, 1)

[node name="Tasks" type="RichTextLabel" parent="Player_UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -211.0
offset_top = 9.0
offset_right = 8.0
offset_bottom = 101.0
grow_horizontal = 0
bbcode_enabled = true
fit_content = true

[node name="Inventory" type="RichTextLabel" parent="Player_UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -122.0
offset_top = -92.0
grow_horizontal = 0
grow_vertical = 0
bbcode_enabled = true
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Player_UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -49.5
offset_right = 32.0
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(32, 49.5)
texture = ExtResource("7_u7sp3")

[node name="sound" type="Control" parent="Player_UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Player_UI/sound"]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 0
offset_left = 25.0
offset_top = -28.0
offset_right = 89.0
offset_bottom = 36.0
scale = Vector2(0.692857, 0.692857)
texture = ExtResource("14_jeaud")

[node name="PauseMenu" type="Control" parent="Player_UI" node_paths=PackedStringArray("returnBtn", "restartBtn", "exitBtn", "fullscreenButn", "noiseBtn", "fireDamageBtn", "debugBtn", "exposure", "fogDensity", "playerSpeed", "monsterSpeed", "monsterDMG", "slider", "joysens_slider", "fogSlider", "exposureSlider", "joysens_text", "sens_text")]
layout_mode = 3
anchor_left = 0.270833
anchor_top = 0.112963
anchor_right = 0.729167
anchor_bottom = 0.887037
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("13_y82ud")
returnBtn = NodePath("Panel/Continue")
restartBtn = NodePath("Panel/Restart")
exitBtn = NodePath("Panel/Exit")
fullscreenButn = NodePath("Panel/TabContainer/Settings/VBoxContainer/HBoxContainer2/fullscreenToggle")
noiseBtn = NodePath("Panel/TabContainer/Gameplay/VBoxContainer2/noise/NoiseToggle")
fireDamageBtn = NodePath("Panel/TabContainer/Gameplay/VBoxContainer2/fire damage/fireDamageToggle")
debugBtn = NodePath("Panel/TabContainer/Gameplay/VBoxContainer2/Debug/debugpath")
exposure = NodePath("Panel/TabContainer/Settings/VBoxContainer/HBoxContainer5/exposureEdit")
fogDensity = NodePath("Panel/TabContainer/Settings/VBoxContainer/HBoxContainer4/fogEdit")
playerSpeed = NodePath("Panel/TabContainer/Gameplay/VBoxContainer2/player speed/LineEdit")
monsterSpeed = NodePath("Panel/TabContainer/Gameplay/VBoxContainer2/monster speed/LineEdit")
monsterDMG = NodePath("Panel/TabContainer/Gameplay/VBoxContainer2/monster Damage/LineEdit")
slider = NodePath("Panel/TabContainer/Settings/VBoxContainer/MouseSensitivity/HSlider")
joysens_slider = NodePath("Panel/TabContainer/Settings/VBoxContainer/Joystick sensitivity/HSlider")
fogSlider = NodePath("Panel/TabContainer/Settings/VBoxContainer/HBoxContainer4/HSlider")
exposureSlider = NodePath("Panel/TabContainer/Settings/VBoxContainer/HBoxContainer5/HSlider")
joysens_text = NodePath("Panel/TabContainer/Settings/VBoxContainer/Joystick sensitivity/LineEdit")
sens_text = NodePath("Panel/TabContainer/Settings/VBoxContainer/MouseSensitivity/LineEdit")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Player_UI/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Player_UI/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" type="TabBar" parent="Player_UI/PauseMenu/Panel/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 52.0
offset_top = 36.0
offset_right = -52.0
offset_bottom = 165.0
grow_horizontal = 2

[node name="MouseSensitivity" type="HBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/MouseSensitivity"]
layout_mode = 2
text = "Mouse Sensitivity"

[node name="HSlider" type="HSlider" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/MouseSensitivity"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.001
max_value = 3.0
step = 0.001
value = 0.01

[node name="LineEdit" type="LineEdit" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/MouseSensitivity"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("16_wvoe7")
text = "0.1"
alignment = 1
virtual_keyboard_enabled = false
caret_blink = true

[node name="Joystick sensitivity" type="HBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/Joystick sensitivity"]
layout_mode = 2
text = "Joystick Sensitivity"

[node name="HSlider" type="HSlider" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/Joystick sensitivity"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.001
max_value = 20.0
step = 0.001
value = 3.0

[node name="LineEdit" type="LineEdit" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/Joystick sensitivity"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("16_wvoe7")
text = "5"
alignment = 1
virtual_keyboard_enabled = false
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Fullscreen"

[node name="fullscreenToggle" type="CheckButton" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 0
theme_override_constants/outline_size = 0
action_mode = 0
clip_text = true
vertical_icon_alignment = 0

[node name="HBoxContainer4" type="HBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Fog Density"

[node name="HSlider" type="HSlider" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 5.0
step = 0.001

[node name="fogEdit" type="LineEdit" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("16_wvoe7")
alignment = 1
caret_blink = true

[node name="HBoxContainer5" type="HBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Exposure"

[node name="HSlider" type="HSlider" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 8.0
value = 1.0

[node name="exposureEdit" type="LineEdit" parent="Player_UI/PauseMenu/Panel/TabContainer/Settings/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("16_wvoe7")
alignment = 1
caret_blink = true

[node name="Gameplay" type="TabBar" parent="Player_UI/PauseMenu/Panel/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 52.0
offset_top = 36.0
offset_right = -52.0
offset_bottom = 197.0
grow_horizontal = 2

[node name="noise" type="HBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2/noise"]
layout_mode = 2
text = "Enable Noise
"

[node name="NoiseToggle" type="CheckButton" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2/noise"]
layout_mode = 2
size_flags_horizontal = 10
action_mode = 0

[node name="fire damage" type="HBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2/fire damage"]
layout_mode = 2
text = "Enable Fire damage
"

[node name="fireDamageToggle" type="CheckButton" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2/fire damage"]
layout_mode = 2
size_flags_horizontal = 10
action_mode = 0

[node name="player speed" type="HBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2/player speed"]
layout_mode = 2
text = "Player Speed"

[node name="LineEdit" type="LineEdit" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2/player speed"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("16_wvoe7")
alignment = 1
max_length = 4

[node name="monster speed" type="HBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2/monster speed"]
layout_mode = 2
text = "Monster Speed"

[node name="LineEdit" type="LineEdit" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2/monster speed"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("16_wvoe7")
alignment = 1
max_length = 4

[node name="monster Damage" type="HBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2/monster Damage"]
layout_mode = 2
text = "Monster Damage"

[node name="LineEdit" type="LineEdit" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2/monster Damage"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("16_wvoe7")
alignment = 1
max_length = 4

[node name="Debug" type="HBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2/Debug"]
layout_mode = 2
text = "Debug path"

[node name="debugpath" type="CheckButton" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/VBoxContainer2/Debug"]
layout_mode = 2
size_flags_horizontal = 10
action_mode = 0

[node name="Timer" type="HBoxContainer" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay"]
process_mode = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -36.0
offset_right = 346.0
offset_bottom = -13.0
grow_vertical = 0
script = ExtResource("15_rbqk4")

[node name="label" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/Timer"]
layout_mode = 2
text = "Play Time: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="Player_UI/PauseMenu/Panel/TabContainer/Gameplay/Timer"]
layout_mode = 2
text = "0:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="Player_UI/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -51.0
offset_bottom = 31.0
grow_horizontal = 0
theme = SubResource("Theme_naa5d")
text = "X
"

[node name="Restart" type="Button" parent="Player_UI/PauseMenu/Panel"]
visible = false
layout_mode = 0
offset_left = 500.0
offset_top = 695.0
offset_right = 603.0
offset_bottom = 719.0
theme_override_font_sizes/font_size = 11
disabled = true
text = "Restart
"

[node name="Exit" type="Button" parent="Player_UI/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -43.0
offset_right = -24.0
offset_bottom = -19.0
grow_horizontal = 0
grow_vertical = 0
text = "Exit
"

[node name="Label" type="Label" parent="Player_UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "State"
script = ExtResource("16_d86sr")
